k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop
  labels:
    app.kubernetes.io/part-of: workshop-demo
